Add steam package to recipe installation list

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -24,6 +24,7 @@ modules:
     install:
       packages:
         - mullvad-vpn
+        - steam
         - winetricks
         - protontricks
    # remove:
