--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -21,10 +21,12 @@ modules:
     repos:
       files:
         - https://repository.mullvad.net/rpm/stable/mullvad.repo
+        - https://negativo17.org/repos/fedora-steam.repo
     install:
       packages:
         - mullvad-vpn
         - steam
+        - kernel-modules-extra
         - winetricks
         - protontricks
    # remove:
